# eBooks

./: FirstReadBook.txt  README.md
Dev21Test/dev21test01/: dev21test01.cbp  dev21test01.depend  dev21test01.layout  main.cpp
Dev21Test/dev21test02/: dev21test02.cbp  dev21test02.layout  main.cpp
Dev21Test/dev21test03/: dev21test03.cbp  main.cpp
Dev22Test/Dev22test03/: Dev22test03.cbp  Dev22test03.depend  main.cpp
Dev22Test/dev22test01/: dev22test01.cbp  dev22test01.depend  dev22test01.layout  main.cpp
Dev22Test/dev22test02/: dev22test02.cbp  dev22test02.depend  dev22test02.layout  main.cpp
Homeworks/Homework08/: Homework08.cbp  Homework08.depend  Homework08.layout  main.cpp
Homeworks/homework01/: homework01.cbp  homework01.depend  homework01.layout  main.cpp
Homeworks/homework02/: homework02.cbp  homework02.depend  homework02.layout  main.cpp
Homeworks/homework03/: homework03.cbp  homework03.depend  homework03.layout  main.cpp
Homeworks/homework04/: homework04.cbp  homework04.depend  homework04.layout  main.cpp
Homeworks/homework05/: homework05.cbp  homework05.depend  homework05.layout  main.cpp
Homeworks/homework06/: homework06.cbp  homework06.depend  homework06.layout  main.cpp
Homeworks/homework07/: homework07.cbp  homework07.depend  homework07.layout  main.bk.cpp  main.cpp
Monitor/: TrafficSimulator.txt
Monitor/Borrar/: Borrar.cbp  Borrar.depend  Borrar.layout  main.cpp
Monitor/Lego City/: Lego City.cbp  Lego City.depend  Lego City.layout  main.cpp
Monitor/My Traffic Simulator/: My Traffic Simulator.cbp  My Traffic Simulator.depend  My Traffic Simulator.layout  main-2.cpp  main.cpp  some-notes.txt
Monitor/Parser/: main.cpp  parser.depend  parser.layout
Monitor/Parser-x/: parser.cbp
Monitor/Practice 32 - Shared Pointer/: Practice 32 - Shared Pointer.cbp  Practice 32 - Shared Pointer.layout  main.cpp
Monitor/Practice 32 - Weak Ptr/: Practice 32 - Weak Ptr.layout
Monitor/Practices 31 - Smart Pointers/: main.cpp
Monitor/Prueba Mapa/: Prueba Mapa.cbp  main.cpp
Monitor/Traffic Light/: Traffic Light.cbp  Traffic Light.depend  main.cpp
Monitor/TrafficLight/: TrafficLight.cbp  TrafficLight.layout  main.cpp
Monitor/TrafficLight.bck/: Traffic Light.layout
Monitor/Tuplas/: Tuplas.cbp  Tuplas.layout  main.cpp
Monitor/borrador/: borrador.cbp  borrador.depend  borrador.layout  main.cpp
Monitor/fparser/: PType.h  main.cpp  scanner.cbp  scanner.depend  scanner.layout
Monitor/myperceptron/: main.cpp  myperceptron.cbp  myperceptron.depend  myperceptron.layout
Monitor/optionparser/: CMakeLists.txt  explicacionList.txt  main.cpp  optionparser.cbp  optionparser.depend  optionparser.layout
Monitor/optionparser/include/: Boolean.h  IOptionType.h  Integer.h  List.h  OptionDefinition.h  OptionParser.h  OptionType.h  Real.h  Text.h
Monitor/optionparser/src/: Boolean.cpp  Integer.cpp  List.cpp  OptionDefinition.cpp  OptionParser.cpp  Real.cpp  Text.cpp
Monitor/optionparser/test/: ATest.cpp  CMakeLists.txt  ITest.cpp  UTest.cpp
Monitor/scanner/: main.cpp  scanner.cbp  scanner.depend  scanner.layout
Monitor/simplepreceptron/: main.cpp  simplepreceptron.cbp  (+1 more)
Monitor/trafficsimulator/: CMakeLists.txt  CRC-Cards.txt  main.cpp
Monitor/trafficsimulator/include/: Map.h  SimulationResult.h  TrafficLight.h  TrafficSimulator.h  Vehicle.h
Monitor/trafficsimulator/src/: Map.cpp  TrafficLight.cpp  TrafficSimulator.cpp  Vehicle.cpp  WindowsConsole.cpp
Practices/: example01.cpp
(+243 files in other folders)
